fix(dashboard): notif z-index

--- a/app/pages/Dashboard/style/notifications.scss
+++ b/app/pages/Dashboard/style/notifications.scss
@@ -91,12 +91,14 @@
 
         opacity: 0;
         transform: translateX(100%);
+        z-index: -1;
 
         transition: all 0.5s ease-in-out;
 
         &.active {
             opacity: 1;
             transform: translateX(0);
+            z-index: 1;
         }
     }
 }
